@@ -12,7 +12,8 @@ Harley D. Eades III <hde@foobar-qux.org>
 Hollis Blanchard <hollis@penguinppc.org>
 Jeroen Dekkers <jeroen@dekkers.cx>
 Johan Rydberg <jrydberg@gnu.org>
-Marco Gerards <metgerards@student.han.nl>
+Marco Gerards <marco@gnu.org>
+Michael Guntsche <mike@it-loops.com>
 NIIBE Yutaka <gniibe@m17n.org>
 Omniflux <omniflux@omniflux.com>
 Robert Bihlmeyer <robbe@orcus.priv.at>
